# Amadeus

./: .env.example  .gitignore  README-EN.md  README.md  blueprint.md  demo1  findings.md  progress.md  pyproject.toml  task_plan.md  使用说明.md  最开始的产品构想.md
app/: __init__.py  front_lab_main.py  main.py  planlab_main.py
app/communication/: __init__.py  channels.py  hub.py  qq.py
app/core/: __init__.py  events.py  outcomes.py  state.py  types.py
app/front/: __init__.py  executor_lab.py
app/infra/: __init__.py  embeddings.py  env.py  model_client.py  settings.py  storage.py
app/mcp/: __init__.py  builtins.py  compat.py  registry.py  schemas.py
app/memory/: README.md  __init__.py  models.py  retrieval.py  service.py  snapshots.py
docs/: configuration.md  runtime.md
scripts/: planlab_cli_test.py  runtime-config.ps1  start-server.ps1  start-tunnel.ps1  status-server.ps1  status-tunnel.ps1  stop-server.ps1  stop-tunnel.ps1  tail-logs.ps1
tests/: test_api.py  test_autonomous_runtime.py  test_core_models.py  test_embeddings.py  test_env_loading.py  test_execution.py  test_execution_granularity.py  test_execution_memory_injection.py  test_executor_lab.py  test_interaction.py  test_mcp_capabilities.py  test_mcp_filesystem_integration.py  test_mcp_settings.py  test_memory.py  test_memory_service.py  test_model_client.py  test_orchestrator.py  test_persona_service.py  test_planning.py  test_proactive_interaction.py  test_qq_adapter.py  test_replan.py  test_role_simulation.py  test_scenario_runtime.py  test_settings.py  test_support.py  test_tool_registry.py
(+58 files in other folders)
