[project]
name = "amadeus"
version = "0.1.0"
description = "Persona-driven, event-driven agent runtime MVP"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "anthropic>=0.86.0,<1.0.0",
  "fastapi>=0.115.0,<1.0.0",
  "httpx>=0.28.0,<1.0.0",
  "mcp>=1.26.0,<2.0.0",
  "openai>=2.29.0,<3.0.0",
  "pydantic>=2.10.0,<3.0.0",
  "pydantic-ai>=1.70.0,<2.0.0",
  "python-dotenv>=1.0.0,<2.0.0",
  "uvicorn>=0.34.0,<1.0.0",
]

[dependency-groups]
dev = [
  "pytest>=8.3.0,<9.0.0",
  "ruff>=0.11.0,<1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
